# DEDS_Portfolio

./: README.md  pyproject.toml
data/processed/: countryCurrency.xlsx  product.xlsx  productIntroDate.xlsx  productMargin.xlsx  sales_branch.xlsx
src/: DEDS_WC_1.1a_Opdrachten.ipynb  main.py
src/1.1/: DEDS_WC_1.1a_Opdrachten.ipynb
src/1.1b/: DEDS_WC_1.1b_Opdrachten(1).ipynb
src/2.1/: DEDS_WC_1.2_en_1.3_Opdrachten.ipynb
src/notebooks/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten(1).ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  script.ipynb
src/scripts/: script.py
